tests/duarouter/errors/false_net/options.duarouter
--net-file=input/input_net.net.xml --route-files=input_trips.trips.xml -o routes.rou.xml
